--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@ p {
   <p id="demo"></p>
 
 <script>
-var year = (new Date()).getFullYear();
+const urlParams = new URLSearchParams(window.location.search);
+const qs_year = parseInt(urlParams.get('year'));
+
+var year = qs_year || (new Date()).getFullYear();
 // Set the date we're counting down to
 var countDownDate = new Date("Jan 1, "+(year+1)+"; 0:0:0").getTime();
-
 // Update the count down every 1 second
 var x = setInterval(function() {
   document.getElementById("message").innerHTML = "Waiting for " + (year+1);
