--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
       margin-top: 0px;
       color: white;
     }
-
+    @media only screen and (max-width: 425px) {
+      p {
+        text-align: center;
+        font-size: 12vw;
+        margin-top: 0px;
+        color: white;
+      }
+    }
     html, body {
       margin: 0; padding: 0;
       height: 100%;
